Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-50314

{scopes,collections}-details stats can't be accessed (enoent)

    XMLWordPrintable

Details

    • Untriaged
    • 1
    • Yes
    • KV 2022-Jan

    Description

      This patch simplified keeping a consistent list of stat groups, adding StatsGroupManager and an enum value for each valid group.

      However, ep-engine initially filters some groups by prefix:

          if (cb_isPrefix(key, "collections")) {
              return doCollectionStats(
                      c, add_stat, std::string(key.data(), key.size()));
          }
      

      and later checks the rest of the key:

      if (cb_isPrefix(statKey, "collections-details")) {
              return doCollectionDetailStats(bucket, collector, arg);
          }
      

      It appears this was missed; collections and collections-byid are both listed in StatsGroupManager/StatGroupId and are still accessible whereas collections-details is not, and is thus rejected by StatsCommandContext with cb::engine_errc::no_such_key.

      scopes-details appears similarly affected.

      collections-details does appear to be requested for a cbcollect.

      collections-details and scopes-details should be added to StatGroupId and StatsGroupManager entries.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            james.harrison James Harrison (Inactive)
            james.harrison James Harrison (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty