MB-50314: Add scopes-/collections-details to StatsGroupManager

These groups were missed when introducing StatsGroupManager, leaving
both groups inaccessible. Add them now to allow them to be requested.

Change-Id: Iffbfc1f5a2f86e0769937ba238def309ff72eff3
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/168441
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>